@@ -56,8 +56,9 @@ class tx_l10nmgr_domain_translation_pageCollection extends ArrayObject implement
 	 * @author Michael Klapper <michael.klapper@aoemedia.de>
 	 * @return void
 	 */
-	public function markAsImported() {
-		$this->isImported = true;
+	public function markImported() {
+//!TODO refactor this, the object should not allowed to set his own isImported state to true
+//		$this->isImported = true;
 	}
 
 	/**
@@ -69,12 +70,19 @@ class tx_l10nmgr_domain_translation_pageCollection extends ArrayObject implement
 	 */
 	public function isImported() {
 
-		foreach ( $this as $Page ) {
-			if (! $Page->isImported() ) {
-				$this->isImported = false;
-				break;
+		if ($this->isImported !== true) {
+
+			foreach ( $this as $Page ) { /* @var $Page tx_l10nmgr_domain_translation_page */
+				if (! $Page->isImported()) {
+					$this->isImported = false;
+					break;
+				}
+				$this->isImported = true;
 			}
-			$this->isImported = true;
+
+			if ( ($this->isImported === false) && ($this->count() === 0) ) {
+				$this->isImported = true;
+			}
 		}
 
 		return $this->isImported;
@@ -111,6 +119,7 @@ class tx_l10nmgr_domain_translation_pageCollection extends ArrayObject implement
 		}
 
 		parent::offsetSet($index, $Page);
+		$this->isImported = false;
 	}
 
 	/**
@@ -127,6 +136,7 @@ class tx_l10nmgr_domain_translation_pageCollection extends ArrayObject implement
 		}
 
 		parent::append($Page);
+		$this->isImported = false;
 	}
 }
 
