@@ -1,3 +1,9 @@
+2009-05-04 Michael Klapper <michael.klapper@aoemedia.de>
+	* Refactor the translation package
+	  - Disable the markImported() 
+	  - Optimize and cache the isImported state including their polling
+	  - Keep attention on the fields who are marked as skipped
+
 2009-04-29 Michael Klapper <michael.klapper@aoemedia.de>
 	* Replace class tx_l10nmgr_models_importer_importService with tx_l10nmgr_service_importTranslation
 	* Update PHPdoc of domain/translation package
